--- a/monmon/src/assets/scss/Variables.scss
+++ b/monmon/src/assets/scss/Variables.scss
@@ -24,7 +24,7 @@ $default-transition: 0.5s;
 $fast-transition: 0.2s;
 $extra-fast-transition: 0.1s;
 
-$brand-green: #28ed00;
+$brand-yellow: #FFBF00;
 $brand-green-washed-out: #b2e68a;
 $default-white: whitesmoke;
 $default-black: #1f1f1f;
