--- a/monmon/src/assets/scss/Variables.scss
+++ b/monmon/src/assets/scss/Variables.scss
@@ -19,6 +19,7 @@ $background-z-index: 0;
 $list-z-index: 5;
 $list-overlay-z-index: 10;
 $header-z-index: 15;
+$loading-z-index: 20;
 
 $default-transition: 0.5s;
 $fast-transition: 0.2s;
@@ -34,6 +35,10 @@ $slightly-darker-bg: #cbccd1;
 $deep-bg-color: #EFF0F2;
 $light-grey: rgb(197, 197, 197);
 $grey: #878787;
+$dark-grey: #4d4d4d;
+
+$dark-color-overlay: rgba(0, 0, 0, 0.76);
+$light-color-overlay: rgba(247, 247, 247, 0.5);
 
 $container-shadow-color: #a8a8a8;
 $container-highlight-color: #ffffff;
