--- a/monmon/src/assets/scss/Variables.scss
+++ b/monmon/src/assets/scss/Variables.scss
@@ -37,6 +37,8 @@ $light-grey: rgb(197, 197, 197);
 $grey: #878787;
 $dark-grey: #4d4d4d;
 
+$error-red: #d17449;
+
 $dark-color-overlay: rgba(0, 0, 0, 0.76);
 $light-color-overlay: rgba(247, 247, 247, 0.5);
 
