Trying to add new button (will probably revert everything)

--- a/monmon/src/assets/scss/Variables.scss
+++ b/monmon/src/assets/scss/Variables.scss
@@ -5,6 +5,7 @@ $large-distance: 32px;
 $extra-large-distance: 64px;
 $corner-rounding: 10px;
 
+$small-button-size: 24px;
 $default-button-size: 42px;
 
 $top-bar-height: 64px;
