--- a/monmon/src/assets/scss/GlobalComponents.scss
+++ b/monmon/src/assets/scss/GlobalComponents.scss
@@ -33,10 +33,11 @@ h6,
 p {
   color: $default-black;
 }
-
-button {
+.button {
   box-sizing: border-box;
   padding: $small-distance;
+  height: $small-button-size;
+  min-width: $small-button-size;
   border: none;
   border: 2px solid $brand-yellow;
   border-radius: $extra-small-distance;
@@ -47,15 +48,23 @@ button {
     -1px -1px 4px $container-highlight-color;
 }
 
-button.yellow {
+.button-yellow {
   //   background: linear-gradient(145deg, #f26e16, #cb5d13);
   background: $brand-yellow;
   color: $default-black;
 }
 
+.button.mouseover {
+  background-color: $default-white;
+  border: 2px solid $default-white;
+  transition-duration: $fast-transition;
+}
 
-
-
+.button.clicked {
+  box-shadow: 2px 2px 4px $container-highlight-color,
+    -1px -1px 4px $interactive-element-shadow-color;
+  transition-duration: $fast-transition;
+}
 
 button.white {
   background: $default-white;
@@ -232,7 +241,6 @@ textarea:focus {
   .logo {
     margin-bottom: $extra-large-distance * 2;
   }
-
 
   form {
     display: flex;
