--- a/monmon/src/assets/scss/GlobalComponents.scss
+++ b/monmon/src/assets/scss/GlobalComponents.scss
@@ -1,4 +1,6 @@
 @import "Variables";
+@import "InteractiveElements";
+@import "CategoriesColors";
 
 body {
   font-family: "Quicksand", sans-serif;
@@ -32,87 +34,6 @@ h5,
 h6,
 p {
   color: $default-black;
-}
-.button {
-  box-sizing: border-box;
-  padding: $small-distance;
-  height: $small-button-size;
-  min-width: $small-button-size;
-  border: none;
-  border: 2px solid $brand-yellow;
-  border-radius: $extra-small-distance;
-  background: none;
-  //background: linear-gradient(145deg, #f0f5fd, #caced4);
-  //   background: $background-color;
-  box-shadow: 2px 2px 4px $interactive-element-shadow-color,
-    -1px -1px 4px $container-highlight-color;
-}
-
-.button-yellow {
-  //   background: linear-gradient(145deg, #f26e16, #cb5d13);
-  background: $brand-yellow;
-  color: $default-black;
-}
-
-.button.mouseover {
-  background-color: $default-white;
-  border: 2px solid $default-white;
-  transition-duration: $fast-transition;
-}
-
-.button.clicked {
-  box-shadow: 2px 2px 4px $container-highlight-color,
-    -1px -1px 4px $interactive-element-shadow-color;
-  transition-duration: $fast-transition;
-}
-
-button.white {
-  background: $default-white;
-  border-color: $default-white;
-  color: $brand-yellow;
-  box-shadow: 1px 1px 4px $default-black,
-    -1px -1px 4px $container-highlight-color;
-}
-
-button.checkmark img {
-  border: 2px solid $grey;
-}
-
-button.square-btn {
-  width: $default-button-size;
-  height: $default-button-size;
-  padding: $extra-small-distance;
-
-  i {
-    font-size: $default-button-size - ($extra-small-distance * 2);
-  }
-}
-
-button.round-btn {
-  width: $large-distance;
-  height: $large-distance;
-  padding: $extra-small-distance;
-
-  i {
-    font-size: $large-distance - ($extra-small-distance * 2);
-  }
-}
-
-input,
-select,
-textarea {
-  max-width: 100%;
-  background: none;
-  border: none;
-  padding: $extra-small-distance;
-  box-sizing: border-box;
-  border-bottom: 1px solid $default-black;
-}
-
-input:focus,
-select:focus,
-textarea:focus {
-  border-bottom: 2px solid $brand-yellow;
 }
 
 .container-inset {
@@ -148,6 +69,14 @@ textarea:focus {
   align-items: center;
 }
 
+.vertical-flex-center {
+  display:flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .text-shadow {
   text-shadow: 0 1px 2px $default-black;
 }
@@ -165,11 +94,11 @@ textarea:focus {
 }
 
 .separator-bottom-light {
-  border-bottom: 2px solid $slightly-darker-bg;
+  border-bottom: 1px solid $slightly-darker-bg;
 }
 
 .separator-bottom-dark {
-  border-bottom: 2px solid $default-black;
+  border-bottom: 1px solid $default-black;
 }
 
 .standard-margins-vertical {
@@ -178,7 +107,7 @@ textarea:focus {
 }
 
 .separator-top-light {
-  border-top: 2px solid $default-white;
+  border-top: 1px solid $default-white;
 }
 
 .default-padding {
@@ -216,17 +145,18 @@ textarea:focus {
   height: 100vh;
 }
 
-.vertical-flex-wrap {
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-}
-
 .landing-state-view {
   background-color: $brand-yellow;
   width: 100vw;
   height: 100vh;
   position: relative;
+
+  .wrapper{
+    height: 100%;
+    form{
+      width: 100%;
+    }
+  }
 
   h1,
   h2,
@@ -239,52 +169,9 @@ textarea:focus {
   }
 
   .logo {
-    margin-bottom: $extra-large-distance * 2;
-  }
-
-  form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
     margin-bottom: $extra-large-distance;
-
-    input {
-      width: 85%;
-      margin-top: $default-distance;
-      margin-bottom: $default-distance;
-      text-align: center;
-      font-weight: bold;
-    }
-
-    input[type="anys"]:focus {
-      border: none;
-    }
-
-    ::placeholder {
-      /* Chrome, Firefox, Opera, Safari 10.1+ */
-      color: $dark-grey;
-      font-weight: normal;
-      opacity: 1; /* Firefox */
-    }
-
-    :-ms-input-placeholder {
-      /* Internet Explorer 10-11 */
-      font-weight: normal;
-      color: $slightly-darker-bg;
-    }
-
-    ::-ms-input-placeholder {
-      /* Microsoft Edge */
-      font-weight: normal;
-      color: $slightly-darker-bg;
-    }
+    margin-top: $extra-large-distance;
   }
-}
-
-.header-top {
-  padding: $default-distance 0;
 }
 
 .error-msg {
