--- a/monmon/src/assets/scss/Variables.scss
+++ b/monmon/src/assets/scss/Variables.scss
@@ -43,6 +43,7 @@ $dark-grey: #4d4d4d;
 $error-red: #d17449;
 
 $dark-color-overlay: rgba(0, 0, 0, 0.76);
+$medium-color-overlay: rgba(0, 0, 0, 0.26);
 $light-color-overlay: rgba(247, 247, 247, 0.5);
 
 $container-shadow-color: #a8a8a8;
