--- a/monmon/src/assets/scss/GlobalComponents.scss
+++ b/monmon/src/assets/scss/GlobalComponents.scss
@@ -134,7 +134,7 @@ p {
 
 #main-color-overlay.hidden {
   background-color: rgba(0, 0, 0, 0);
-  left: -100vh;
+  left: -100vw;
   transition-duration: background-color $fast-transition;
   transition-duration: left $extra-fast-transition;
 }
